Large code refactor allowing for message commands